Switching to ast based generation